integrated crop-disease-prediction model

--- a/templates/diseaseprediction.html
+++ b/templates/diseaseprediction.html
@@ -103,11 +103,11 @@
     </p>
 
     <div class="feature-images">
-      <img src="disease-prediction1.webp" alt="Disease Symptoms" class="feature-image">
-      <img src="disease-prediction2.jpeg" alt="Farmer Analyzing Disease" class="feature-image">
+      <img src="static/disease-prediction1.webp" alt="Disease Symptoms" class="feature-image">
+      <img src="static/disease-prediction2.jpeg" alt="Farmer Analyzing Disease" class="feature-image">
     </div>
 
-    <a href="index.html" class="back-button">← Back to Home</a>
+    <a href="/" class="back-button">← Back to Home</a>
   </div>
 </body>
 </html>
