--- a/templates/fertilizer.html
+++ b/templates/fertilizer.html
@@ -103,11 +103,11 @@
     </p>
 
     <div class="feature-images">
-      <img src="soil-testing.jpg" alt="Soil Test" class="feature-image">
-      <img src="Fertilizing.jpg" alt="Fertilizer Application" class="feature-image">
+      <img src="static/soil-testing.jpg" alt="Soil Test" class="feature-image">
+      <img src="static/Fertilizing.jpg" alt="Fertilizer Application" class="feature-image">
     </div>
 
-    <a href="index.html" class="back-button">← Back to Home</a>
+    <a href="/" class="back-button">← Back to Home</a>
   </div>
 </body>
 </html>
