--- a/templates/govtschemes.html
+++ b/templates/govtschemes.html
@@ -103,11 +103,11 @@
     </p>
 
     <div class="feature-images">
-      <img src="pm-kusum-yojana.webp" alt="Government Schemes Info" class="feature-image">
-      <img src="schemesfarmers.webp" alt="Farmer with Subsidy Benefits" class="feature-image">
+      <img src="static/pm-kusum-yojana.webp" alt="Government Schemes Info" class="feature-image">
+      <img src="static/schemesfarmers.webp" alt="Farmer with Subsidy Benefits" class="feature-image">
     </div>
 
-    <a href="index.html" class="back-button">← Back to Home</a>
+    <a href="/" class="back-button">← Back to Home</a>
   </div>
 </body>
 </html>
