--- a/templates/croprecommendation.html
+++ b/templates/croprecommendation.html
@@ -104,11 +104,11 @@
     </p>
 
     <div class="feature-images">
-      <img src="crop-recommendation1.jpg" alt="Crop Analysis" class="feature-image">
-      <img src="crop-recommendation2.jpeg" alt="Farmer Choosing Crops" class="feature-image">
+      <img src="static/crop-recommendation1.jpg" alt="Crop Analysis" class="feature-image">
+      <img src="static/crop-recommendation2.jpeg" alt="Farmer Choosing Crops" class="feature-image">
     </div>
 
-    <a href="index.html" class="back-button">← Back to Home</a>
+    <a href="/" class="back-button">← Back to Home</a>
   </div>
 </body>
 </html>
